1454 update tests